--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/documents_tables_with_popup.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/documents_tables_with_popup.xhtml
@@ -3,7 +3,14 @@
   xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
   xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
   xmlns:nxu="http://nuxeo.org/nxweb/util"
-  xmlns:nxd="http://nuxeo.org/nxweb/document"><a4j:region
+  xmlns:c="http://java.sun.com/jstl/core"
+  xmlns:nxd="http://nuxeo.org/nxweb/document">
+  
+<c:if test="false">
+unused template, here for compat
+</c:if>
+  
+<a4j:region
   rendered="#{documents != null}">
   <h:form id="#{documents.name}">
     <h:outputText value="#{messages['label.content.emptyFolder']}"
