--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/createRouteManagerGroup.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/createRouteManagerGroup.html
@@ -48,22 +48,48 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>Link=Nuxeo Admin Center</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>Link=Users &amp; groups</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Groups</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<!--creation d'un groupe Johns-->
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Create a new group</td>
 	<td></td>
 </tr>
 <tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
-	<td>createGroup:nxl_group:nxw_groupname</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
 	<td>routeManagers</td>
 </tr>
 <tr>
@@ -73,8 +99,8 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>createGroup:nxl_group:nxw_members_suggest</td>
-	<td>jdoe</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>jdo</td>
 </tr>
 <tr>
 	<td>waitForA4jRequest</td>
@@ -83,7 +109,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Doe</td>
 </tr>
 <tr>
@@ -93,7 +119,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
