NXP-6819: update small delete icon

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/create_file.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/create_file.xhtml
@@ -18,7 +18,7 @@
 
     <f:facet name="controls">
       <h:panelGroup>
-        <h:graphicImage value="/icons/action_delete_mini.gif"
+        <h:graphicImage value="/icons/action_delete_mini_over.png"
           id="hideImportFilePanel" />
         <rich:componentControl for="importFile"
           attachTo="hideImportFilePanel" operation="hide" event="onclick" />
