--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/user_clipboard.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/user_clipboard.xhtml
@@ -45,7 +45,7 @@
            <h:commandLink
               actionListener="#{clipboardActions.removeWorkListItem(copiedDocument.ref)}"
               >
-              <nxu:graphicImage value="/icons/action_delete_mini.gif" />
+              <nxu:graphicImage value="/icons/action_delete_mini.png" />
             </h:commandLink>
           </span>
           <nxu:graphicImage
