--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/select_document_type.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/select_document_type.xhtml
@@ -18,7 +18,7 @@
 
       <f:facet name="controls">
         <h:panelGroup>
-          <h:graphicImage value="/icons/action_delete_mini.gif"
+          <h:graphicImage value="/icons/action_delete_mini_over.png"
             id="hideDocTypePanel" />
           <rich:componentControl for="selectDocTypePanel"
             attachTo="hideDocTypePanel" operation="hide" event="onclick" />
