NXP-6819: update small delete icon

--- a/nuxeo-platform-tag-service/nuxeo-platform-tag-web/src/main/resources/web/nuxeo.war/widgets/summary/tagging_widget_template.xhtml
+++ b/nuxeo-platform-tag-service/nuxeo-platform-tag-web/src/main/resources/web/nuxeo.war/widgets/summary/tagging_widget_template.xhtml
@@ -42,7 +42,7 @@
           immediate="true"
           reRender="#{widget.id}_message_banner, #{widget.id}_taggingPanel, MultiTreeView"
           rendered="#{tagActions.canModifyTag(tag)}">
-          <h:graphicImage value="/icons/action_delete_mini.gif" />
+          <h:graphicImage value="/icons/action_delete_mini_over.png" />
          </a4j:commandLink>
       </nxu:column>
 
