--- a/nuxeo-platform-imaging/nuxeo-platform-imaging-dm/src/main/resources/web/nuxeo.war/incl/picture_download_form.xhtml
+++ b/nuxeo-platform-imaging/nuxeo-platform-imaging-dm/src/main/resources/web/nuxeo.war/incl/picture_download_form.xhtml
@@ -15,7 +15,7 @@
     
   <f:facet name="controls">
     <h:panelGroup>
-      <h:graphicImage value="/icons/action_delete_mini.gif"
+      <h:graphicImage value="/icons/action_delete_mini_over.png"
         id="hideImgPopup" />
       <rich:componentControl for="imagingPanel" attachTo="hideImgPopup"
         operation="hide" event="onclick" />
