--- a/nuxeo-platform-tag-service/nuxeo-platform-tag-web/src/main/resources/web/nuxeo.war/incl/tagging.xhtml
+++ b/nuxeo-platform-tag-service/nuxeo-platform-tag-web/src/main/resources/web/nuxeo.war/incl/tagging.xhtml
@@ -35,7 +35,7 @@
            <a4j:commandLink id="removeTag" action="#{tagActions.removeTagging(tag.label)}" immediate="true"
              reRender="tag_message_banner, taggingPanel, MultiTreeView"
              rendered="#{tagActions.canModifyTag(tag)}">
-             <h:graphicImage value="/icons/action_delete_mini.gif" />
+             <h:graphicImage value="/icons/action_delete_mini_over.png" />
            </a4j:commandLink>
         </nxu:column>
 
