NXP-6819: update small delete icon

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/select_path_tree_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/select_path_tree_widget_template.xhtml
@@ -129,7 +129,7 @@
             actionListener="#{editableListBean.performAction}"
             id="#{widget.id}_delete" reRender="#{widget.id}_listRegion"
             bypassUpdates="true">
-            <img src="/nuxeo/icons/action_delete_mini.gif" alt="Delete" />
+            <img src="/nuxeo/icons/action_delete_mini_over.png" alt="Delete" />
             <f:param name="for" value="#{widget.id}_list" />
             <f:param name="index" value="#{model.rowIndex}" />
             <f:param name="type" value="remove" />
