--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/select_route_elements_type.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/select_route_elements_type.xhtml
@@ -22,7 +22,7 @@
   
       <f:facet name="controls">
         <h:panelGroup>
-          <h:graphicImage value="/icons/action_delete_mini.gif"
+          <h:graphicImage value="/icons/action_delete_mini_over.png"
             id="hideRouteElementsTypePanel" />
           <rich:componentControl for="selectRouteElementsTypePanel"
             attachTo="hideRouteElementsTypePanel" operation="hide" event="onclick" />
