NXP-6414: update selenium tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/deleteUser.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/deleteUser.html
@@ -134,6 +134,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyTextPresent</td>
+	<td>carlos</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Log out</td>
 	<td></td>
