--- a/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupAdmin.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupAdmin.html
@@ -123,6 +123,26 @@
 	<td>10000</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>susan</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Back to the list</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 <!--creation d'un groupe Sous-members-->
 <tr>
 	<td>watchA4jRequests</td>
@@ -201,6 +221,26 @@
 	<td></td>
 </tr>
 <!--Verification de la redirection sur la fiche du groupe-->
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sub-admins</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Back to the list</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 <tr>
 	<td>type</td>
 	<td>//input[@id='groupsListingView:searchForm:searchText']</td>
