--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/createRouteManagerGroup.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/createRouteManagerGroup.html
@@ -128,8 +128,23 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value='Save']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>routeManagers</td>
 	<td></td>
 </tr>
 
