--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/login/createUsers.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/login/createUsers.html
@@ -158,7 +158,26 @@
 	<td>10000</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sg+jdoe@nuxeo.com</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Back to the list</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 <tr>
 	<td>watchA4jRequests</td>
 	<td></td>
@@ -252,6 +271,26 @@
 <tr>
 	<td>click</td>
 	<td>//input[@value='Save']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sg+jsmith@nuxeo.com</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Back to the list</td>
 	<td></td>
 </tr>
 <tr>
@@ -360,6 +399,26 @@
 	<td>10000</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sg+bree@nuxeo.com</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Back to the list</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 
 <tr>
 	<td>watchA4jRequests</td>
@@ -454,6 +513,26 @@
 <tr>
 	<td>click</td>
 	<td>//input[@value='Save']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sg+lbramard@nuxeo.com</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Back to the list</td>
 	<td></td>
 </tr>
 <tr>
@@ -562,6 +641,12 @@
 	<td>10000</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sg+linnet@nuxeo.com</td>
+	<td></td>
+</tr>
+
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Log out</td>
