NXP-6414: update selenium tests

--- a/ftest/selenium/tests/setupSecurityRestrictions.html
+++ b/ftest/selenium/tests/setupSecurityRestrictions.html
@@ -137,6 +137,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyTextPresent</td>
+	<td>restrictedUser</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/nuxeo/</td>
 	<td></td>
