NXP-6414: be able to directly create a new user or group after saving a new one

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/create_group.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/create_group.xhtml
@@ -20,6 +20,15 @@
         <tr>
           <td>
             <a4j:commandButton
+              id="button_save_and_create"
+              value="#{messages['command.saveAndCreate']}"
+              action="#{groupManagementActions.createGroup(true)}"
+              styleClass="button"
+              reRender="groupsPanel,facesStatusMessagePanel">
+              <nxu:actionListenerMethod value="#{editableListBean.resetAllListsCachedModels}" />
+            </a4j:commandButton>
+            <a4j:commandButton
+              id="button_save"
               value="#{messages['command.save']}"
               action="#{groupManagementActions.createGroup}"
               styleClass="button"
