--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_footer.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_footer.xhtml
@@ -4,18 +4,37 @@
      xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:insert name="footer">
- <h:outputText value="#{messages['label.login.copyright']}" />  
-  <h:outputLink onclick="window.open(this.href); return false;" value="http://nuxeo.com/subscription/connect?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
-  <h:outputText value="#{messages['label.login.getSupport']}" />
+ <div class="nuxLinks">
+ <h:outputLink onclick="window.open(this.href); return false;" value="http://www.nuxeo.com/en/about/contact?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputText value="#{messages['label.footer.contactUs']}" />
     </h:outputLink> | <!-- &nbsp; -->
-  <h:outputLink onclick="window.open(this.href); return false;" value="http://www.nuxeo.org/discussions/index.jspa?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
-    <h:outputText value="#{messages['label.login.forums']}" />
+    <h:outputLink onclick="window.open(this.href); return false;" value="http://blogs.nuxeo.com/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputText value="#{messages['label.footer.blogs']}" />
+    </h:outputLink> | <!-- &nbsp; -->
+  <h:outputLink onclick="window.open(this.href); return false;" value="http://community.nuxeo.com/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputText value="#{messages['label.footer.community']}" />
+    </h:outputLink> | <!-- &nbsp; -->
+  <h:outputLink onclick="window.open(this.href); return false;" value="http://forum.nuxeo.com/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+    <h:outputText value="#{messages['label.footer.forums']}" />
   </h:outputLink>
   | <!-- &nbsp; -->
   <h:outputLink onclick="window.open(this.href); return false;" value="http://doc.nuxeo.com/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
-    <h:outputText value="#{messages['label.login.documentation']}" />
+    <h:outputText value="#{messages['label.footer.documentation']}" />
+  </h:outputLink>
+  | <!-- &nbsp; -->
+  <h:outputLink class="twitt" onclick="window.open(this.href); return false;" value="http://twitter.com/nuxeo/&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+    <h:outputText value="Twitter" style="display:none;"/>
+  </h:outputLink><!-- &nbsp; -->
+  <h:outputLink class="linkedin" onclick="window.open(this.href); return false;" value="http://www.linkedin.com/groupRegistration?gid=43314?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+    <h:outputText value="LinkedIn" style="display:none;" />
   </h:outputLink>
   
+  </div>
+  <div class="copyrights">
+   <h:outputText value="#{messages['label.login.copyright']}" />
+ </div>
+  <div class="clear"></div>
+   
 <c:if test="false">
   NXP-3151: move language selector to login page
   <h:form id="langSelectForm">
@@ -30,5 +49,6 @@
                      id="langSelectSubmitButton" />
   </h:form>
 </c:if>
+
 </ui:insert>
 </div>
