--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
@@ -8,66 +8,10 @@
 
 <ui:insert name="user">
 
-  <h:form id="userServicesSearchForm">
-    <div class="searchService">
+  <h:form id="userServicesForm" class="userServicesBlock">
 
-      <c:if test="#{userServicesContext.searchEnabled}">
-        <h:inputText value="#{documentSearchActions.simpleSearchKeywords}" size="15"
-          class="directoryFilter"
-          onkeydown="if (event.keyCode == 13) {Element.next(Element.next(this)).select();} else return true;"
-          id="simpleSearchKeywordsInput"
-          required="true" requiredMessage="#{messages['feedback.search.noKeywords']}"
-          validator="#{documentSearchActions.validateSimpleSearchKeywords}" />
-        <h:commandButton action="search_results_simple"
-          value="#{messages['command.search']}" styleClass="button"
-          id="simpleSearchSubmitButton" />
-
-        <nxu:set var="actions"
-          value="#{webActions.getActionsList('SEARCH_ACTIONS')}"
-          cache="true">
-          <nxu:dataList layout="simple"
-            var="action"
-            value="#{actions}"
-            id="searchActionsTable">
-            <span class="advancedSearchLink">
-              <nxh:commandLink action="#{action.getLink()}"
-                value="#{messages[action.label]}"
-                immediate="true"
-                id="searchActionsButton" />
-            </span>
-          </nxu:dataList>
-        </nxu:set>
-      </c:if>
-    </div>
-  </h:form>
-
-  <h:form id="userServicesForm">
-    <div class="searchService">
-
-      <nxu:set var="actions"
-        value="#{webActions.getActionsList('SEARCH_LINKS')}"
-        cache="true">
-        <nxu:dataList layout="simple"
-                      var="action"
-                      value="#{actions}"
-                      rowIndexVar="row"
-                      rowCountVar="rowCount"
-                      id="searchLinksActionsTable">
-          <h:outputText value=" | " rendered="#{row!=rowCount}"/>
-          <h:outputLink value="#{baseURL}#{action.getLink()}"
-            id="searchLinksActionLink">
-            <h:outputText value="#{messages[action.label]}" />
-          </h:outputLink>
-        </nxu:dataList>
-      </nxu:set>
-
-    </div>
-
-
-    <div class="userActions">
-
-      <div class="tabsBar">
-        <nxu:dataList layout="unorderedList" var="mainTab" value="#{webActions.getActionsList('MAIN_TABS')}"
+    <div class="mainTabs">
+      <nxu:dataList layout="unorderedList" var="mainTab" value="#{webActions.getActionsList('MAIN_TABS')}"
           itemStyleClass="#{nxu:test(webActions.getCurrentTabId('MAIN_TABS') == mainTab.id, 'selected', '')}">
           <nxh:commandLink action="#{mainTab.getLink()}"
               id="mainTabsActionCommandLink"
@@ -75,10 +19,11 @@
               <nxu:actionListenerMethod
                 value="#{webActions.setCurrentTabId('MAIN_TABS', mainTab.id, null)}" />
               <h:outputText value="#{messages[mainTab.label]}" />
-            </nxh:commandLink>
-        </nxu:dataList>
-      </div>
+          </nxh:commandLink>
+      </nxu:dataList>
+    </div>
 
+    <div class="userActions">
       <h:outputText value="#{messages['label.loggedAsUser']}" />
 
       <nxu:set var="actions"
@@ -127,8 +72,63 @@
       </nxu:set>
 
     </div>
+    
+    <div class="searchService">
+
+      <nxu:set var="actions"
+        value="#{webActions.getActionsList('SEARCH_LINKS')}"
+        cache="true">
+        <nxu:dataList layout="simple"
+                      var="action"
+                      value="#{actions}"
+                      rowIndexVar="row"
+                      rowCountVar="rowCount"
+                      id="searchLinksActionsTable">
+          <h:outputText value=" | " rendered="#{row!=rowCount}"/>
+          <h:outputLink value="#{baseURL}#{action.getLink()}"
+            id="searchLinksActionLink">
+            <h:outputText value="#{messages[action.label]}" />
+          </h:outputLink>
+        </nxu:dataList>
+      </nxu:set>
+
+    </div>
 
   </h:form>
+  
+  <h:form id="userServicesSearchForm" class="userSearchBlock">
+    <div class="searchService">
+
+      <c:if test="#{userServicesContext.searchEnabled}">
+        <h:inputText value="#{documentSearchActions.simpleSearchKeywords}" size="15"
+          class="directoryFilter"
+          onkeydown="if (event.keyCode == 13) {Element.next(Element.next(this)).select();} else return true;"
+          id="simpleSearchKeywordsInput"
+          required="true" requiredMessage="#{messages['feedback.search.noKeywords']}"
+          validator="#{documentSearchActions.validateSimpleSearchKeywords}" />
+        <h:commandButton action="search_results_simple"
+          value="#{messages['command.search']}" styleClass="button"
+          id="simpleSearchSubmitButton" />
+
+        <nxu:set var="actions"
+          value="#{webActions.getActionsList('SEARCH_ACTIONS')}"
+          cache="true">
+          <nxu:dataList layout="simple"
+            var="action"
+            value="#{actions}"
+            id="searchActionsTable">
+            <span class="advancedSearchLink">
+              <nxh:commandLink action="#{action.getLink()}"
+                value="#{messages[action.label]}"
+                immediate="true"
+                id="searchActionsButton" />
+            </span>
+          </nxu:dataList>
+        </nxu:set>
+      </c:if>
+    </div>
+  </h:form>
+  <div class="clear"></div>
 
     <c:if test="#{adminMessageActivated}">
     <div style="text-align: center; padding: 5px 5px 5px 25px; border: 1px solid rgb(170, 187, 255); background: url('icons/info.gif') no-repeat 3px center #fff; font: normal 12px Arial,sans-serif; margin:3px;">
