NXP-6835: fix style with richFace calendar new module, and add margin to the Inherited rights checkbox

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_rights.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_rights.xhtml
@@ -67,7 +67,7 @@
 </h:form>
 
 <p><h:form id="block_inherit">
-  <h:selectBooleanCheckbox value="#{securityActions.blockRightInheritance}"
+  <h:selectBooleanCheckbox  class="checkBox" value="#{securityActions.blockRightInheritance}"
     immediate="true" onclick="this.form.submit();" />
   <h:outputText value="#{messages['label.security.block.inehritance']}" />
 </h:form></p>
