--- a/nuxeo-distribution-dm/ftest/selenium/tests/testContentViewLocalConfiguration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testContentViewLocalConfiguration.html
@@ -8,7 +8,7 @@
 <thead>
 <tr><td rowspan="1" colspan="3">testContentViewLocalConfiguration</td></tr>
 </thead><tbody>
-<!--@Test groups:TestContentViewLocalConfiguration|depends:createNote-->
+<!--@Test groups:TestContentViewLocalConfiguration,introduction-->
 <!--Identification-->
 <tr>
 	<td>setTimeout</td>
@@ -26,19 +26,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>nxpath/default/default-domain/workspaces/testWorkspace1/testFolder1@view_documents</td>
-	<td></td>
-</tr>
-<tr>
 	<td>type</td>
 	<td>username</td>
-	<td>jsmith</td>
+	<td>Administrator</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>password</td>
-	<td>jsmith1</td>
+	<td>Administrator</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -47,12 +42,80 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as jsmith</td>
+	<td>You are logged as Administrator</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Workspaces</td>
+	<td></td>
+</tr>
+<!--Création d'un espace de travail-->
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Create a new workspace</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>//td[@class=&quot;fieldColumn&quot;]/input[@type=&quot;text&quot;]</td>
+	<td>localConfigWS</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<!--Création d'un dossier-->
+<tr>
+	<td>mouseDown</td>
+	<td>link=New</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Folder</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>//td[@class=&quot;fieldColumn&quot;]/input[@type=&quot;text&quot;]</td>
+	<td>localConfigFolder</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<!--Création d'une note-->
+<tr>
+	<td>mouseDown</td>
+	<td>link=New</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Note</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>//td[@class=&quot;fieldColumn&quot;]/input[@type=&quot;text&quot;]</td>
+	<td>localConfigNote</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=localConfigFolder</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>testNote1</td>
+	<td>localConfigNote</td>
 	<td></td>
 </tr>
 <tr>
@@ -77,12 +140,12 @@
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>testNote1</td>
+	<td>localConfigNote</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=testWorkspace1</td>
+	<td>link=localConfigWS</td>
 	<td></td>
 </tr>
 <tr>
@@ -127,12 +190,12 @@
 </tr>
 <tr>
 	<td>select</td>
-	<td>contentViewConfigurationView:local_configuration_nxl_content_view_configuration:local_configuration_nxl_content_view_configuration_form:nxl_content_view_configuration:nxw_content_view_selection:nxw_content_view_selection_input:0:nxw_content_view_selection_docType</td>
+	<td>contentViewConfigurationView:local_configuration_nxl_content_view_configuration:local_configuration_nxl_content_view_configuration_form:nxl_content_view_configuration:nxw_content_view_selection:nxw_content_view_selection_input:0:nxw_complexListItem_1:nxw_docType_2</td>
 	<td>label=Folder</td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>contentViewConfigurationView:local_configuration_nxl_content_view_configuration:local_configuration_nxl_content_view_configuration_form:nxl_content_view_configuration:nxw_content_view_selection:nxw_content_view_selection_input:0:nxw_content_view_selection_contentView</td>
+	<td>contentViewConfigurationView:local_configuration_nxl_content_view_configuration:local_configuration_nxl_content_view_configuration_form:nxl_content_view_configuration:nxw_content_view_selection:nxw_content_view_selection_input:0:nxw_complexListItem_1:nxw_contentView_2</td>
 	<td>label=Trash content</td>
 </tr>
 <tr>
@@ -152,12 +215,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=testFolder1</td>
+	<td>link=localConfigFolder</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>testNote1</td>
+	<td>localConfigNote</td>
 	<td></td>
 </tr>
 <tr>
@@ -182,12 +245,12 @@
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>testNote1</td>
+	<td>localConfigNote</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=testWorkspace1</td>
+	<td>link=localConfigWS</td>
 	<td></td>
 </tr>
 <tr>
@@ -217,12 +280,67 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=testFolder1</td>
+	<td>link=localConfigFolder</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>testNote1</td>
+	<td>localConfigNote</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Workspaces</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>document_content:nxl_document_listing_ajax:nxw_listing_ajax_selection_box_with_current_document</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForEditable</td>
+	<td>document_content:clipboardActionsTable_0_0:3:clipboardActionsButton</td>
+	<td>12000</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>document_content:clipboardActionsTable_0_0:3:clipboardActionsButton</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>Delete selected document(s)?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Manage</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Trash</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>document_trash_content:nxl_document_listing_ajax:nxw_listing_ajax_selection_box_with_current_document</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForEditable</td>
+	<td>document_trash_content:clipboardActionsTable_0_0:0:clipboardActionsButton</td>
+	<td>12000</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>document_trash_content:clipboardActionsTable_0_0:0:clipboardActionsButton</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>Permanently delete selected document(s)?</td>
 	<td></td>
 </tr>
 <!--Déconnexion-->
