NXP-6419: add styles for Galaxy default theme

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_footer.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_footer.xhtml
@@ -22,14 +22,14 @@
     <h:outputText value="#{messages['label.footer.documentation']}" />
   </h:outputLink>
   | <!-- &nbsp; -->
-  <h:outputLink class="twitt" onclick="window.open(this.href); return false;" value="http://twitter.com/nuxeo/&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputLink class="twitt" onclick="window.open(this.href); return false;" value="http://twitter.com/nuxeo/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
     <h:outputText value="Twitter" style="display:none;"/>
   </h:outputLink><!-- &nbsp; -->
-  <h:outputLink class="linkedin" onclick="window.open(this.href); return false;" value="http://www.linkedin.com/groupRegistration?gid=43314?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputLink class="linkedin" onclick="window.open(this.href); return false;" value="http://www.linkedin.com/groupRegistration?gid=43314&amp;utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
     <h:outputText value="LinkedIn" style="display:none;" />
   </h:outputLink>
-  
   </div>
+  
   <div class="copyrights">
    <h:outputText value="#{messages['label.login.copyright']}" />
  </div>
