NXP-6842: Replace nuxeo home logo by DM one, remove admin background image

--- a/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy_user_center.xhtml
+++ b/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy_user_center.xhtml
@@ -6,7 +6,7 @@
   <div>
     <h:form>
       <h:commandLink action="#{adminViews.exit()}">
-        <h:graphicImage value="/img/nuxeo_home_logo.png" alt="Nuxeo Home" width="183" height="36" />
+        <h:graphicImage value="/img/nuxeo_5.2_logo.png" alt="Nuxeo Home" width="116" height="36" />
       </h:commandLink>
     </h:form>
   </div>
