NXP-6419: update selenium tests

--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
@@ -205,7 +205,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as jdoe</td>
+	<td>jdoe</td>
 	<td></td>
 </tr>
 <tr>
@@ -666,7 +666,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as bob</td>
+	<td>bob</td>
 	<td></td>
 </tr>
 <tr>
@@ -721,7 +721,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as jdoe</td>
+	<td>jdoe</td>
 	<td></td>
 </tr>
 <tr>
