--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/login/testLoginOK.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/login/testLoginOK.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as Administrator</td>
+	<td>Administrator</td>
 	<td></td>
 </tr>
 <tr>
