--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/createRouteManagerGroup.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/createRouteManagerGroup.html
@@ -43,12 +43,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as Administrator</td>
+	<td>Administrator</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>Link=Nuxeo Admin Center</td>
+	<td>Link=Admin Center</td>
 	<td></td>
 </tr>
 <tr>
@@ -147,7 +147,6 @@
 	<td>routeManagers</td>
 	<td></td>
 </tr>
-
 
 </tbody></table>
 </body>
