Remove HTML escaping for probe results

--- a/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/web/nuxeo.war/incl/monitoring/adminProbes.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/web/nuxeo.war/incl/monitoring/adminProbes.xhtml
@@ -32,7 +32,7 @@
     <h:column>
       <f:facet name="header"><h:outputText value="#{messages['label.monitoring.probe.status']}" />
       </f:facet>
-      <h:outputText value="#{probe.status}" />
+      <h:outputText value="#{probe.status}" escape="false" />
     </h:column>
     <h:column>
       <f:facet name="header"><h:outputText value="#{messages['label.monitoring.probe.history']}" />
