NXP-6852 display nb of connected users when restarting server

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/hostInfo.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/hostInfo.xhtml
@@ -8,8 +8,14 @@
 
  <h2><h:outputText value="#{messages['adminsubtab.sysinfo.hostserverinfo']}" /></h2>
  <script>
+ var nbActiveSessions=#{nbActiveUserHttpSessions};
+
  function confirmRestart() {
-  return window.confirm("<h:outputText value="#{messages['label.restart.confirm']}" />");
+  var restartMessage = '<h:outputText value="#{messages['label.restart.confirm']}" />';
+  if (nbActiveSessions>1) {
+    restartMessage = restartMessage + "\n( " + (nbActiveSessions-1) + " " + "<h:outputText value="#{messages['label.restart.connectedusers']}" />" + ' )';
+  }
+  return window.confirm(restartMessage);
  }
  </script>
  <pre>
