NXP-6419: update tests, use users/groups search button id

--- a/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
@@ -260,7 +260,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
@@ -528,7 +528,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
