--- a/nuxeo-distribution-dm/ftest/selenium/tests/searchGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/searchGroup.html
@@ -98,7 +98,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
@@ -139,7 +139,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
