--- a/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupMembers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupMembers.html
@@ -253,7 +253,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
@@ -324,7 +324,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
@@ -452,7 +452,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='usersListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
