--- a/nuxeo-distribution-dm/ftest/selenium/tests/deleteUser.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/deleteUser.html
@@ -186,7 +186,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='usersListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
@@ -262,7 +262,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='usersListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
