--- a/nuxeo-distribution-dm/ftest/selenium/tests/modifyGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/modifyGroup.html
@@ -86,7 +86,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='groupsListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
