NXP-6419: update tests, use users/groups search button id

--- a/ftest/selenium/tests/removeSecurityRestrictions.html
+++ b/ftest/selenium/tests/removeSecurityRestrictions.html
@@ -83,7 +83,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//input[@value='Search']</td>
+	<td>//input[@id='usersListingView:searchForm:searchButton']</td>
 	<td></td>
 </tr>
 <tr>
