--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createCertificate.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createCertificate.html
@@ -67,28 +67,53 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>sign_form:signingReason</td>
-	<td>test reason</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>sign_form:password</td>
-	<td>Certificate</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>sign_form:SignPDF</td>
+	<td>verifyTextPresent</td>
+	<td>Go to certificate management</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Signature</td>
+	<td>Link=Go to certificate management</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>certificateForm:firstPassword</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>certificateForm:secondPassword</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Generate Certificate']</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>This document is signed</td>
+	<td>Your certificate password should be different from your login password</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>certificateForm:firstPassword</td>
+	<td>Certificate</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>certificateForm:secondPassword</td>
+	<td>Certificate</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Generate Certificate']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>CN=John Doe,</td>
 	<td></td>
 </tr>
 <tr>
