--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>setTimeout</td>
-	<td>120000</td>
+	<td>12000</td>
 	<td></td>
 </tr>
 <tr>
@@ -48,48 +48,58 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>Link=Users &amp; groups</td>
+	<td>Link=Nuxeo Admin Center</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Create a new user</td>
+	<td>Link=Users &amp; groups</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>usersListingView:createUserActionsForm:createUserButton</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>300</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_username']</td>
+	<td>createUserView:createUser:nxl_user:nxw_username</td>
 	<td>jdoe</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstname']</td>
+	<td>createUserView:createUser:nxl_user:nxw_firstname</td>
 	<td>John</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_lastname']</td>
+	<td>createUserView:createUser:nxl_user:nxw_lastname</td>
 	<td>Doe</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_company']</td>
+	<td>createUserView:createUser:nxl_user:nxw_company</td>
 	<td>Nuxeo</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstPassword']</td>
-	<td>password</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_secondPassword']</td>
-	<td>password</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_email']</td>
+	<td>createUserView:createUser:nxl_user:nxw_email</td>
 	<td>jdoe@localhost</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>createUserView:createUser:nxl_user:nxw_firstPassword</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>createUserView:createUser:nxl_user:nxw_secondPassword</td>
+	<td>password</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
@@ -98,47 +108,37 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createUser:nxl_user:nxw_groups_suggest']</td>
+	<td>//input[@name='createUserView:createUser:nxl_user:nxw_groups_suggest']</td>
 	<td>members</td>
 </tr>
 <tr>
 	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
+	<td>1000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//table[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/tbody/tr[1]/td[2]</td>
 	<td></td>
 </tr>
 <tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
+	<td>click</td>
+	<td>createUserView:createUser:button_create</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Save']</td>
+	<td>pause</td>
+	<td>1000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Doe</td>
+	<td>User created</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Back to the list</td>
+	<td>link=Exit admin center</td>
 	<td></td>
 </tr>
 <tr>
