--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
@@ -6,14 +6,13 @@
   <title>Test Suite</title>
 </head>
 <body>
-<table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium">
-<tbody>
+<table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="signature/createUsers.html">Create Users</a></td></tr>
 <tr><td><a href="signature/createWorkspace.html">Create Workspace</a></td></tr>
 <tr><td><a href="signature/importPDF.html">Import PDF</a></td></tr>
-<tr><td><a href="signature/signPDF.html">Sign PDF</a></td></tr> 
-</tbody>
-</table>
+<tr><td><a href="signature/createCertificate.html">Create Certificate</a></td></tr>
+<tr><td><a href="signature/signPDF.html">Sign PDF</a></td></tr>
+</tbody></table>
 </body>
 </html>
