--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -43,12 +43,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as Administrator</td>
+	<td>Default domain</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>Link=Nuxeo Admin Center</td>
+	<td>Link=Admin Center</td>
 	<td></td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>createUserView:createUser:button_create</td>
+	<td>createUserView:createUser:button_save_and_create</td>
 	<td></td>
 </tr>
 <tr>
@@ -137,13 +137,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Exit admin center</td>
-	<td></td>
-</tr>
-<tr>
-	<td>open</td>
-	<td>/nuxeo/logout</td>
+	<td>click</td>
+	<td>link=Log out</td>
 	<td></td>
 </tr>
 </tbody></table>
