--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
@@ -44,7 +44,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as jdoe</td>
+	<td>Default domain</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>jdoe</td>
 	<td></td>
 </tr>
 <tr>
