--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/signPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/signPDF.html
@@ -43,7 +43,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>You are logged as jdoe</td>
+	<td>Default domain</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>jdoe</td>
 	<td></td>
 </tr>
 <tr>
