FT timing adjustements

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -63,13 +63,13 @@
 </tr>
 <tr>
 	<td>pause</td>
-	<td>300</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>createUserView:createUser:nxl_user:nxw_username</td>
-	<td>jdoe</td>
+	<td>jdoe1</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -128,7 +128,7 @@
 </tr>
 <tr>
 	<td>pause</td>
-	<td>1000</td>
+	<td>300</td>
 	<td></td>
 </tr>
 <tr>
