--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/signPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/signPDF.html
@@ -72,6 +72,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>2000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>sign_form:signingReason</td>
 	<td>test reason</td>
@@ -87,8 +92,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Signature</td>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
