--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createCertificate.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createCertificate.html
@@ -4,7 +4,7 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://localhost:8080/nuxeo/login.jsp" />
-<title>signPDF</title>
+<title>createCertificate</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -74,6 +74,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Go to certificate management</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>2000</td>
 	<td></td>
 </tr>
 <tr>
