FT name correction

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -69,7 +69,7 @@
 <tr>
 	<td>type</td>
 	<td>createUserView:createUser:nxl_user:nxw_username</td>
-	<td>jdoe1</td>
+	<td>jdoe</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -124,16 +124,6 @@
 <tr>
 	<td>click</td>
 	<td>createUserView:createUser:button_save_and_create</td>
-	<td></td>
-</tr>
-<tr>
-	<td>pause</td>
-	<td>300</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>User created</td>
 	<td></td>
 </tr>
 <tr>
