--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createWorkspace.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createWorkspace.html
@@ -4,7 +4,7 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>createUsers</title>
+<title>createWorkspace</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
