NXP-6419: update tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupAdmin.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupAdmin.html
@@ -613,7 +613,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Exit admin center</td>
+	<td>link=Document Management</td>
 	<td></td>
 </tr>
 <tr>
