--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 	<td>pause</td>
-	<td>3000</td>
+	<td>1000</td>
 	<td></td>
 </tr>
 <tr>
@@ -122,8 +122,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>1000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>createUserView:createUser:button_save_and_create</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>1000</td>
 	<td></td>
 </tr>
 <tr>
