--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
@@ -43,6 +43,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>500</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Default domain</td>
 	<td></td>
