NXP-6869 Remove versionning NXP-6876: Verify user certificate unicity in document signatures

--- a/nuxeo-platform-signature-web/src/main/resources/nuxeo.war/incl/tabs/sign_view.xhtml
+++ b/nuxeo-platform-signature-web/src/main/resources/nuxeo.war/incl/tabs/sign_view.xhtml
@@ -58,7 +58,8 @@
       </tr>
     </tbody>
   </table>
-
+  
+  <!-- This document has signatures. Show them. -->
   <c:if test="#{signActions.isPDFSigned()}">
     <table class="dataInput">
       <tbody>
@@ -76,8 +77,8 @@
     </table>
   </c:if>
 
-  <!-- the document is not signed -->
-  <c:if test="#{ !signActions.isPDFSigned()}">
+  <!-- The current user did not sign this document. Display the signing form. -->
+  <c:if test="#{ !signActions.isPDFSignedByCurrentUser()}">
     <table class="dataInput">
       <tbody>
         <tr>
