NXP-6775: remove current tabs from main tab link as current tabs in other categories should now be kept correctly

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
@@ -16,7 +16,7 @@
           itemStyleClass="#{nxu:test(webActions.getCurrentTabId('MAIN_TABS') == mainTab.id, 'selected', '')}">
           <nxd:restDocumentLink document="#{currentDocument}"
             view="#{mainTab.getLink()}" addTabInfo="false"
-            tabs="#{webActions.currentTabIds},MAIN_TABS:#{mainTab.id}">
+            tabs="MAIN_TABS:#{mainTab.id}">
             <h:outputText value="#{messages[mainTab.label]}" />
           </nxd:restDocumentLink>
       </nxu:dataList>
