NXP-6889: move translation in the computation of the children node

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/single_directory_tree_explorer.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/single_directory_tree_explorer.xhtml
@@ -32,7 +32,7 @@
               <a4j:commandLink immediate="true"
                id="directoryNavCommandLink"
                 action="#{node.selectNode}" styleClass="treeLink">
-                <h:outputText value="#{messages[node.description]}" />
+                <h:outputText value="#{node.description}" />
               </a4j:commandLink>
             </div>
           </rich:treeNode>
