NXP-6899: Remove redundant slash

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/dnd/legacyDnd.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/dnd/legacyDnd.xhtml
@@ -314,7 +314,7 @@ if (window.addEventListener)
 <!-- waiter html -->
 <div id="waiter" style="display: none;">
 <span id="waiter_message"> upload in progress </span><br/>
-<img src="#{baseURL}/waitdialog/NXwaiter.gif"/><br/>
+<img src="#{baseURL}waitdialog/NXwaiter.gif"/><br/>
 <a id="waiter_close" href="#" onclick="transfertCanceled()">close</a>
 </div>
 <!--  waiter overlay  -->
