--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/includes_old.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/includes_old.xhtml
@@ -334,7 +334,7 @@ if (window.addEventListener)
 <!-- waiter html -->
 <div id="waiter" style="display: none;">
 <span id="waiter_message"> upload in progress </span><br/>
-<img src="#{baseURL}/waitdialog/NXwaiter.gif"/><br/>
+<img src="#{baseURL}waitdialog/NXwaiter.gif"/><br/>
 <a id="waiter_close" href="#" onclick="transfertCanceled()">close</a>
 </div>
 <!--  waiter overlay  -->
